--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -56,8 +56,20 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     protected final Set<Id> recordIds;
     protected final Set<Id> objIds = new Set<Id>(); // necessary; there's a bind variable in the query string
     private final Set<String> previouslyResetParents = new Set<String>();
+    private final FullRecalcProcessor postProcessor;
 
     public FullRecalcProcessor(String queryString, InvocationPoint invokePoint, List<Rollup__mdt> rollupInfo, SObjectType calcItemType, Set<Id> recordIds) {
+      this(queryString, invokePoint, rollupInfo, calcItemType, recordIds, null);
+    }
+
+    public FullRecalcProcessor(
+      String queryString,
+      InvocationPoint invokePoint,
+      List<Rollup__mdt> rollupInfo,
+      SObjectType calcItemType,
+      Set<Id> recordIds,
+      FullRecalcProcessor postProcessor
+    ) {
       super(invokePoint);
       this.isFullRecalc = true;
       this.isNoOp = true; // consumers should either opt out of this or have it be set properly downstream
@@ -65,6 +77,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       this.queryString = queryString;
       this.rollupInfo = rollupInfo;
       this.recordIds = recordIds;
+      this.postProcessor = postProcessor;
       this.overrideRollupControl();
     }
 
@@ -79,12 +92,23 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       return String.valueOf(this.rollupInfo);
     }
 
+    protected void finish() {
+      if (this.postProcessor != null) {
+        RollupLogger.Instance.log('Starting post-full recalc processor', this.postProcessor, LoggingLevel.DEBUG);
+        // chain jobs together so that if recalc job is being tracked within the Recalc Rollups app,
+        // job continuity is established between the full recalc and then any downstream job that runs
+        // (as the postProcessor)
+        this.setCurrentJobId(this.postProcessor.runCalc());
+      }
+    }
+
     private Boolean parentRollupFieldHasBeenReset(RollupAsyncProcessor processor, SObject parent) {
       return this.previouslyResetParents.contains(this.getKey(processor, parent));
     }
 
     private void storeParentResetField(RollupAsyncProcessor processor, SObject parent) {
       this.previouslyResetParents.add(this.getKey(processor, parent));
+      this.postProcessor?.recordIds.add(parent.Id);
     }
 
     private String getKey(RollupAsyncProcessor processor, SObject parent) {
@@ -273,6 +297,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
 
   public virtual void finish(Database.BatchableContext context) {
     this.logFinish();
+    this.fullRecalcProcessor?.finish();
   }
 
   public virtual override String runCalc() {
@@ -427,6 +452,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     public void execute(System.QueueableContext qc) {
       System.attachFinalizer(new RollupFinalizer());
       this.process(this.rollups);
+      this.fullRecalcProcessor?.finish();
       this.logFinish();
     }
   }
@@ -464,6 +490,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       innerRoll.isFullRecalc = true;
       innerRoll.calcItems = calcItems;
     }
+    this.fullRecalcProcessor = fullRecalcProcessor;
     return processor;
   }
 
