--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -6,7 +6,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupA
     InvocationPoint invokePoint,
     List<Rollup__mdt> rollupInfo,
     SObjectType calcItemType,
-    Set<Id> recordIds,
+    Set<String> recordIds,
     FullRecalcProcessor postProcessor
   ) {
     super(queryString, invokePoint, rollupInfo, calcItemType, recordIds, postProcessor);
@@ -68,7 +68,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupA
       CalcItemBag bag = local.get(lookupKey);
       this.statefulLookupToCalcItems.put(lookupKey, bag);
       lookupToCalcItems.put(lookupKey, bag);
-      this.recordIds.add((Id) lookupKey);
+      this.recordIds.add(lookupKey);
     }
   }
 }
