--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -27,6 +27,7 @@ global without sharing virtual class Rollup {
   private static Boolean isCDC = false;
   private static Boolean isDeferralAllowed = true;
   private static Boolean isFullRecalcApp = false;
+  private static String currentJobId;
 
   protected final RollupControl__mdt rollupControl;
   protected final InvocationPoint invokePoint;
@@ -166,7 +167,7 @@ global without sharing virtual class Rollup {
   }
 
   private class RollupMetadata {
-    public final Set<Id> recordIds = new Set<Id>();
+    public final Set<String> recordIds = new Set<String>();
     public final Set<String> queryFields = new Set<String>();
     public final List<Rollup__mdt> metadata = new List<Rollup__mdt>();
     public String whereClause = '';
@@ -281,6 +282,10 @@ global without sharing virtual class Rollup {
     isDeferralAllowed = value;
   }
 
+  protected void setCurrentJobId(String jobId) {
+    currentJobId = jobId;
+  }
+
   protected RollupAsyncProcessor getAsyncRollup(
     List<Rollup__mdt> rollupOperations,
     SObjectType sObjectType,
@@ -365,7 +370,7 @@ global without sharing virtual class Rollup {
 
     Integer amountOfCalcItems = 0;
     Set<String> objIds = new Set<String>(); // will always be present as a bind var, below
-    Set<Id> recordIds = new Set<Id>(); // always empty, here, but necessary for the "getCountFromDb" call
+    Set<String> recordIds = new Set<String>(); // always empty, here, but necessary for the "getCountFromDb" call
     Map<SObjectType, RollupMetadata> childToMetaWrapper = new Map<SObjectType, RollupMetadata>();
     String potentialWhereClause = '';
     String delimiter = ' ||| ';
@@ -440,6 +445,9 @@ global without sharing virtual class Rollup {
 
   @AuraEnabled
   global static String getBatchRollupStatus(String jobId) {
+    if (currentJobId != null) {
+      jobId = currentJobId;
+    }
     return [SELECT Status FROM AsyncApexJob WHERE Id = :jobId LIMIT 1]?.Status;
   }
 
@@ -458,6 +466,15 @@ global without sharing virtual class Rollup {
   @AuraEnabled
   global static String performFullRecalculation(Rollup__mdt meta) {
     return performSerializedFullRecalculation(JSON.serialize(meta));
+  }
+
+  @AuraEnabled
+  public static List<String> getRollupOperationValues() {
+    List<String> picklistValues = new List<String>();
+    for (Schema.PicklistEntry entry : Rollup__mdt.RollupOperation__c.getDescribe().getPicklistValues()) {
+      picklistValues.add(entry.getValue());
+    }
+    return picklistValues;
   }
 
   global class FlowInput {
@@ -2045,26 +2062,31 @@ global without sharing virtual class Rollup {
     List<Rollup__mdt> matchingMeta,
     Integer amountOfCalcItems,
     String queryString,
-    Set<Id> recordIds,
+    Set<String> recordIds,
     SObjectType calcItemType,
     InvocationPoint invokePoint
   ) {
     for (Rollup__mdt meta : matchingMeta) {
       meta.IsFullRecordSet__c = true;
     }
-    Rollup instance = new Rollup(invokePoint);
+    RollupAsyncProcessor.FullRecalcProcessor parentResetProcessor;
+    SObjectType parentType = RollupFieldInitializer.Current.getSObjectFromName(matchingMeta[0].LookupObject__c).getSObjectType();
+    String parentQuery = RollupQueryBuilder.Current.getQuery(parentType, new List<String>{ 'Id' }, 'Id', '!=');
+    parentResetProcessor = new RollupParentResetProcessor(matchingMeta, parentType, parentQuery, recordIds, invokePoint);
     Boolean shouldQueue =
       amountOfCalcItems != RollupQueryBuilder.SENTINEL_COUNT_VALUE &&
-      amountOfCalcItems < instance.rollupControl.MaxLookupRowsBeforeBatching__c;
+      amountOfCalcItems < parentResetProcessor.rollupControl.MaxLookupRowsBeforeBatching__c;
     if (amountOfCalcItems == 0 && matchingMeta.isEmpty() == false && isFullRecalcApp) {
-      SObjectType parentType = RollupFieldInitializer.Current.getSObjectFromName(matchingMeta[0].LookupObject__c).getSObjectType();
-      String parentQuery = RollupQueryBuilder.Current.getQuery(parentType, new List<String>{ 'Id' }, 'Id', '!=');
-      return new RollupParentResetProcessor(matchingMeta, parentType, parentQuery, recordIds, invokePoint);
-    } else if (shouldQueue) {
-      return new RollupDeferredFullRecalcProcessor(matchingMeta, calcItemType, queryString, recordIds, invokePoint);
+      return parentResetProcessor;
+    } else if (invokePoint == InvocationPoint.FROM_SINGULAR_PARENT_RECALC_LWC) {
+      parentResetProcessor = null;
+    }
+
+    if (shouldQueue) {
+      return new RollupDeferredFullRecalcProcessor(matchingMeta, calcItemType, queryString, recordIds, invokePoint, parentResetProcessor);
     } else {
       String queryWithOrderBy = (queryString + getFullRecalcQueryString(matchingMeta));
-      return new RollupFullBatchRecalculator(queryWithOrderBy, invokePoint, matchingMeta, calcItemType, recordIds);
+      return new RollupFullBatchRecalculator(queryWithOrderBy, invokePoint, matchingMeta, calcItemType, recordIds, parentResetProcessor);
     }
   }
 
@@ -2194,7 +2216,7 @@ global without sharing virtual class Rollup {
   private class QueryWrapper {
     private Boolean hasQuery = false;
     private String query;
-    public final Set<Id> recordIds = new Set<Id>();
+    public final Set<String> recordIds = new Set<String>();
     private final List<String> stringifiedRecordIds = new List<String>();
     private QueryWrapper() {
     }
@@ -2262,7 +2284,7 @@ global without sharing virtual class Rollup {
     return getCountFromDb(countQuery, objIds, null);
   }
 
-  public static Integer getCountFromDb(String countQuery, Set<String> objIds, Set<Id> recordIds) {
+  public static Integer getCountFromDb(String countQuery, Set<String> objIds, Set<String> recordIds) {
     if (countQuery.contains('ALL ROWS')) {
       countQuery = countQuery.replace('ALL ROWS', '');
     }
