--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -27,10 +27,10 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
     List<Rollup__mdt> matchingMeta,
     SObjectType calcItemType,
     String queryString,
-    Set<Id> recordIds,
+    Set<String> recordIds,
     InvocationPoint invokePoint
   ) {
-    super(getRefinedQueryString(queryString, matchingMeta), invokePoint, matchingMeta, calcItemType, recordIds);
+    super(getRefinedQueryString(queryString, matchingMeta), invokePoint, matchingMeta, calcItemType, recordIds, null);
     this.overridesRunCalc = true;
     this.isNoOp = false;
     this.shouldSortToFront = true;
@@ -40,6 +40,7 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
     this.isProcessed = true;
     // reset isValidRun flag properly
     getRefinedQueryString(this.queryString, this.rollupInfo);
+    this.objIds.addAll(this.recordIds);
     String processId = this.getNoProcessId();
     if (isValidRun == false) {
       return processId;
@@ -69,7 +70,9 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
     RollupLogger.Instance.log('resetting parent fields for: ' + calcItems.size() + ' items', LoggingLevel.DEBUG);
     for (SObject parentItem : calcItems) {
       for (Rollup__mdt rollupMeta : this.rollupInfo) {
-        parentItem.put(rollupMeta.RollupFieldOnLookupObject__c, null);
+        if (this.parentRollupFieldHasBeenReset(rollupMeta, parentItem) == false) {
+          parentItem.put(rollupMeta.RollupFieldOnLookupObject__c, null);
+        }
       }
     }
     this.getDML().doUpdate(calcItems);
